--- a/api/Pipfile
+++ b/api/Pipfile
@@ -11,6 +11,8 @@ psycopg2 = "*"
 flask-migrate = "*"
 flask-jwt-extended = "*"
 flask-cors = "*"
+python-dotenv = "*"
+cloudinary = "*"
 
 [dev-packages]
 
